--- a/Explore/VCS_DRS_ZDT/.VCS_DRS_ZDT.Project.json
+++ b/Explore/VCS_DRS_ZDT/.VCS_DRS_ZDT.Project.json
@@ -1,6 +1,6 @@
 {
   "objectInfo" : {
-    "id" : "5RneULxfgl2bA3TavpVKiD",
+    "id" : "1de3Jd1z9ASipy4oXy5EAy",
     "name" : "VCS_DRS_ZDT",
     "type" : "Project",
     "metadata" : {
