--- a/Explore/VCS_ForceUndoCheckoutTest/.VCS_ForceUndoCheckoutTest.Project.json
+++ b/Explore/VCS_ForceUndoCheckoutTest/.VCS_ForceUndoCheckoutTest.Project.json
@@ -1,6 +1,6 @@
 {
   "objectInfo" : {
-    "id" : "iXdoawViqSadWJCG8PqLAp",
+    "id" : "1hjbCb07BaRhIn07DMxu0t",
     "name" : "VCS_ForceUndoCheckoutTest",
     "type" : "Project",
     "metadata" : {
